// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginatedEstablishmentsTable matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="tableWrapper"
    >
      <table
        aria-label="Establishment table"
        class="table"
      >
        <thead>
          <tr>
            <th
              class="header"
            >
              Business Name
            </th>
            <th
              class="header"
            >
              Rating
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="noResults"
              colspan="2"
            >
              No establishments found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="navigationContainer"
      data-testid="pagination-controls"
    >
      <button
        aria-disabled="true"
        aria-label="Previous page"
        class="button"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <span
        class="pageInfo"
      >
        Page 1 of 5
      </span>
      <button
        aria-disabled="false"
        aria-label="Next page"
        class="button"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginatedEstablishmentsTable matches snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="error"
      role="alert"
    >
      Connection error
    </div>
    <div
      class="tableWrapper"
    >
      <table
        aria-label="Establishment table"
        class="table"
      >
        <thead>
          <tr>
            <th
              class="header"
            >
              Business Name
            </th>
            <th
              class="header"
            >
              Rating
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="noResults"
              colspan="2"
            >
              No establishments found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="navigationContainer"
      data-testid="pagination-controls"
    >
      <button
        aria-disabled="true"
        aria-label="Previous page"
        class="button"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <span
        class="pageInfo"
      >
        Page 1 of 0
      </span>
      <button
        aria-disabled="false"
        aria-label="Next page"
        class="button"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</DocumentFragment>
`;
